docs/apache-airflow-providers-google/10.25.0/_sources/_api/tests/system/google/cloud/vertex_ai/example_vertex_ai_auto_ml_forecasting_training/index.rst.txt
:py:mod:`tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training`
============================================================================================

.. py:module:: tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Auto ML operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_auto_ml_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: FORECASTING_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: FORECAST_DATASET

   

.. py:data:: TEST_TIME_COLUMN
   :value: 'date'

   

.. py:data:: TEST_TIME_SERIES_IDENTIFIER_COLUMN
   :value: 'store_name'

   

.. py:data:: TEST_TARGET_COLUMN
   :value: 'sale_dollars'

   

.. py:data:: COLUMN_SPECS

   

.. py:data:: create_forecast_dataset

   

.. py:data:: test_run

   

