docs/apache-airflow-providers-google/14.0.0/_sources/_api/tests/system/google/cloud/vertex_ai/example_vertex_ai_auto_ml_forecasting_training/index.rst.txt
tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training
==================================================================================

.. py:module:: tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Auto ML operations.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.ENV_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.PROJECT_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.DAG_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.REGION
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.FORECASTING_DISPLAY_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.MODEL_DISPLAY_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.RESOURCE_DATA_BUCKET
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.FORECAST_DATASET
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.TEST_TIME_COLUMN
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.TEST_TIME_SERIES_IDENTIFIER_COLUMN
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.TEST_TARGET_COLUMN
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.COLUMN_SPECS
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.create_forecast_dataset
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_forecasting_training.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'vertex_ai_auto_ml_operations'


.. py:data:: REGION
   :value: 'us-central1'


.. py:data:: FORECASTING_DISPLAY_NAME
   :value: 'auto-ml-forecasting-Uninferable'


.. py:data:: MODEL_DISPLAY_NAME
   :value: 'auto-ml-forecasting-model-Uninferable'


.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'


.. py:data:: FORECAST_DATASET

.. py:data:: TEST_TIME_COLUMN
   :value: 'date'


.. py:data:: TEST_TIME_SERIES_IDENTIFIER_COLUMN
   :value: 'store_name'


.. py:data:: TEST_TARGET_COLUMN
   :value: 'sale_dollars'


.. py:data:: COLUMN_SPECS

.. py:data:: create_forecast_dataset

.. py:data:: test_run

